# A2A_multi-agents

./: .env.example  .gitignore  INSTALL.md  QUICKSTART.md  README.md  RESEARCH_TESTING.md  pyproject.toml  requirements.txt  start_all_servers.py  test_coordination.py  test_individual_agents.py  verify_setup.py
agents/: __init__.py  assistant_agent.py  base_agent.py  image_agent.py  report_agent.py  research_agent.py  writing_agent.py
core/: __init__.py  a2a_client.py  a2a_server.py
examples/: research_agent_openai_sdk.py
servers/: __init__.py  assistant_server.py  image_server.py  report_server.py  research_server.py  writing_server.py
tools/: __init__.py  interactive_interface.py
